force-app/main/default/objects/Certification__c/Certification__c.object-meta.xml
<CustomObject>
    <description>Track progress toward a certification or renewal.  CEUs are be associated with certifications</description>
    <label>Certification</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Certification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>