force-app/main/default/objects/Certification__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <label>Total CEUs</label>
    <summarizedField>CeuCertification__c.Approved__c</summarizedField>
    <summaryForeignKey>CeuCertification__c.Certification__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>