force-app/main/default/objects/Certification__c/fields/TotalCeus__c.field-meta.xml
<CustomField>
    <fullName>TotalCeus__c</fullName>
    <description>Total Accepted CEUs for the certification</description>
    <label>Total CEUs</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>